...
          */

          const SizedBox(height: 60),
          const EventyLogo(extWidth: 180),
          const SizedBox(height: 20),
          Text(
            "Eventy",
            textAlign: TextAlign.center,
            style: Theme.of(context).textTheme.displayLarge,
          ),
          const SizedBox(height: 20),
          Text(
            "Log In",
...
                      "Don't have an account?",
                      style: TextStyle(
                        fontStyle: FontStyle.italic,
                      ),
                    ),
                    TextButton(
                      key: const Key("log_in_to_sign_up_screen"),
                      onPressed: () async {
                        Widget newScreen = const SignUpScreen();
                        final ris =
                            await Navigator.of(context, rootNavigator: false)
                                .push(
                          ScreenTransition(
...
