...
        bool loggedIn = await loginWithEmail(
          email: email,
          password: password,
          context: context,
        );
        if (loggedIn) {
          showSnackBar(context, "Welcome, $username!");
        }
      } else {
        showSnackBar(context, "Username does not exist");
      }
    } on FirebaseException catch (e) {
      print(e.message);
...
